--- a/app/excursoes.html
+++ b/app/excursoes.html
@@ -13,7 +13,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <link href="css/style-responsive.css" rel="stylesheet"/>
 <!-- font CSS -->
-<link href='//fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <!-- font-awesome icons -->
 <link rel="stylesheet" href="css/font.css" type="text/css"/>
 <link href="css/font-awesome.css" rel="stylesheet">
@@ -171,7 +171,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul class="dropdown-menu extended logout">
                 <li><a href="#"><i class=" fa fa-suitcase"></i>Perfil</a></li>
                 <li><a href="#"><i class="fa fa-cog"></i> Configuracoes</a></li>
-                <li><a href="../login/index.html"><i class="fa fa-key"></i> Sair</a></li>
+                <li><a href="https://joelmarques.github.io/samistur-prototipo/"><i class="fa fa-key"></i> Sair</a></li>
             </ul>
         </li>
         <!-- user login dropdown end -->
@@ -189,108 +189,69 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
             <ul class="sidebar-menu" id="nav-accordion">
                 <li>
                     <a class="active" href="index.html">
-                        <i class="fa fa-dashboard"></i>
-                        <span>Inicio</span>
+                        <i class="fa fa-home"></i>
+                        <span>Início</span>
                     </a>
                 </li>
 
                 <li class="sub-menu">
                     <a href="javascript:;">
-                        <i class="fa fa-th"></i>
-                        <span>Excursoes</span>
+                        <i class="fa fa-plane"></i>
+                        <span>Excursões</span>
                     </a>
                     <ul class="sub">
                         <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="excursoes.html">Excursoes</a></li>
+                        <li><a href="excursoes.html">Excursões</a></li>
+                        <li><a href="fotos.html">Fotos</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
-                        <i class="fa fa-th"></i>
+                        <i class="fa fa-truck"></i>
                         <span>Fretamentos</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="motoristas.html">Motoristas</a></li>
-                    </ul>
-                </li>
-
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-book"></i>
-                        <span>UI Elements</span>
-                    </a>
-                    <ul class="sub">
-						<li><a href="typography.html">Typography</a></li>
-						<li><a href="glyphicon.html">glyphicon</a></li>
-                        <li><a href="grids.html">Grids</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="fontawesome.html">
-                        <i class="fa fa-bullhorn"></i>
-                        <span>Font awesome </span>
-                    </a>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-th"></i>
-                        <span>Data Tables</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="basic_table.html">Basic Table</a></li>
-                        <li><a href="responsive_table.html">Responsive Table</a></li>
+                        <li><a href="#">Motoristas</a></li>
+                        <li><a href="#">Transportes</a></li>
+                        <li><a href="#">Itens de Checagem</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
-                        <i class="fa fa-tasks"></i>
-                        <span>Form Components</span>
+                        <i class="fa fa-money"></i>
+                        <span>Pagamentos</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="form_component.html">Form Elements</a></li>
-                        <li><a href="form_validation.html">Form Validation</a></li>
-						<li><a href="dropzone.html">Dropzone</a></li>
+                        <li><a href="#">Gerar pagamento</a></li>
+                    </ul>
+                </li>
+                <li class="sub-menu">
+                    <a href="javascript:;">
+                        <i class="fa fa-bar-chart-o"></i>
+                        <span>Relatorios</span>
+                    </a>
+                    <ul class="sub">
+                        <li><a href="#">Manutenções</a></li>
+                        <li><a href="#">Resumo Financeiro</a></li>
+                        <li><a href="#">Agenda por Transporte</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-envelope"></i>
-                        <span>Mail </span>
+                        <span>Mail Marketing</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="mail.html">Inbox</a></li>
-                        <li><a href="mail_compose.html">Compose Mail</a></li>
+                        <li><a href="mail_marketing.html">Criar e-mail</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
-                        <i class=" fa fa-bar-chart-o"></i>
-                        <span>Charts</span>
+                        <i class="fa fa-map-marker"></i>
+                        <span>Mapa</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="chartjs.html">Chart js</a></li>
-                        <li><a href="flot_chart.html">Flot Charts</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class=" fa fa-bar-chart-o"></i>
-                        <span>Maps</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="google_map.html">Google Map</a></li>
-                        <li><a href="vector_map.html">Vector Map</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-glass"></i>
-                        <span>Extra</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="gallery.html">Gallery</a></li>
-						<li><a href="404.html">404 Error</a></li>
-                        <li><a href="registration.html">Registration</a></li>
+                        <li><a href="mapas.html">Mapa Mundial</a></li>
                     </ul>
                 </li>
             </ul>            </div>
@@ -327,69 +288,46 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <table class="table table-striped b-t b-light">
         <thead>
           <tr>
-            <th>Nome</th>
-            <th>E-mail</th>
-            <th>Telefone</th>
+            <th>Excursão</th>
+            <th>Data</th>
+            <th>Status</th>
             <th style="width:30px;"></th>
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>Rafaela Souza</td>
-            <td><span class="text-ellipsis">rafaela@mail.com</span></td>
-            <td><span class="text-ellipsis">(91) 9.2354-2345</span></td>
+            <td>Reveillon São Luis</td>
+            <td><span class="text-ellipsis">29/12/2017 à 02/01/2018</span></td>
+            <td><span class="text-ellipsis">Em progresso</span></td>
             <td>
-              <a href="" class="active" ui-toggle-class=""><i class="fa fa-check text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
+              <a href="" class="active" ui-toggle-class=""><i class="fa fa-edit text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
             </td>
           </tr>
           <tr>
-            <td>Felipe Andrade</td>
-            <td>felipe@mail.com</td>
-            <td>(91) 9.8243-8635</td>
+            <td>Reveillon Fortaleza</td>
+            <td>27/12/2017 à 02/01/2018</td>
+            <td>Em progresso</td>
             <td>
-              <a href="" ui-toggle-class=""><i class="fa fa-check text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
+              <a href="" ui-toggle-class=""><i class="fa fa-edit text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
             </td>
           </tr>
           <tr>
-            <td>Claudia Santos</td>
-            <td>claudia@mail.com</td>
-            <td>(91) 9.8835-5436</td>
+            <td>Fortaleza com Jericoacoara</td>
+            <td>09 à 16/01/2018</td>
+            <td>Nova</td>
             <td>
-              <a href="" class="active" ui-toggle-class=""><i class="fa fa-check text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
+              <a href="" class="active" ui-toggle-class=""><i class="fa fa-edit text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
             </td>
           </tr>
           <tr>
-            <td>Rafaela Souza</td>
-            <td><span class="text-ellipsis">rafaela@mail.com</span></td>
-            <td><span class="text-ellipsis">(91) 9.2354-2345</span></td>
+            <td>Sudeste e Sul Fascinante</td>
+            <td><span class="text-ellipsis">03 à 22/01/2018</span></td>
+            <td><span class="text-ellipsis">Cancelada</span></td>
             <td>
-              <a href="" class="active" ui-toggle-class=""><i class="fa fa-check text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
+              <a href="" class="active" ui-toggle-class=""><i class="fa fa-edit text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
             </td>
           </tr>
-          <tr>
-            <td>Joel Marques</td>
-            <td><span class="text-ellipsis">joel@mail.com</span></td>
-            <td><span class="text-ellipsis">(91) 9.2354-2345</span></td>
-            <td>
-              <a href="" class="active" ui-toggle-class=""><i class="fa fa-check text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
-            </td>
-          </tr>
-          <tr>
-            <td>Henrique Igreja</td>
-            <td><span class="text-ellipsis">henrique@mail.com</span></td>
-            <td><span class="text-ellipsis">(91) 9.2354-2345</span></td>
-            <td>
-              <a href="" class="active" ui-toggle-class=""><i class="fa fa-check text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
-            </td>
-          </tr>
-          <tr>
-              <td>Andrea Andrade</td>
-            <td><span class="text-ellipsis">andrea@mail.com</span></td>
-            <td><span class="text-ellipsis">(91) 9.2354-2345</span></td>
-            <td>
-              <a href="" class="active" ui-toggle-class=""><i class="fa fa-check text-success text-active"></i><i class="fa fa-times text-danger text"></i></a>
-            </td>
-          </tr>
+
         </tbody>
       </table>
     </div>
@@ -397,7 +335,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
       <div class="row">
 
         <div class="col-sm-5 text-center">
-          <small class="text-muted inline m-t-sm m-b-sm">Exibindo 7 de 50 clientes</small>
+          <small class="text-muted inline m-t-sm m-b-sm">Exibindo 4 de 20 excursões</small>
         </div>
         <div class="col-sm-7 text-right text-center-xs">
           <ul class="pagination pagination-sm m-t-none m-b-none">
@@ -426,35 +364,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
             <form role="form">
                 <div class="form-group">
-                    <label for="name">Nome</label>
+                    <label for="name">Excursão</label>
                     <input type="text" class="form-control" id="name" placeholder="Nome">
                 </div>
                 <div class="form-group">
-                    <label for="exampleInputEmail1">E-mail</label>
+                    <label for="exampleInputEmail1">Data</label>
                     <input type="email" class="form-control" id="exampleInputEmail3" placeholder="E-mail">
                 </div>
                 <div class="form-group">
-                    <label for="phone">Telefone</label>
+                    <label for="phone">Status</label>
                     <input type="text" class="form-control" id="phone" placeholder="Telefone">
-                </div>
-                <div class="form-group">
-                    <label for="exampleInputFile">Foto</label>
-                    <input type="file" id="exampleInputFile3">
-                    <p class="help-block">Foto do cliente</p>
-                </div>
-                <div class="form-group">
-                    <label for="inputSuccess">Tamanho da camisa</label>
-                    <select class="form-control m-bot15">
-                        <option>Selecione</option>
-                        <option>P</option>
-                        <option>M</option>
-                        <option>G</option>
-                    </select>
-                </div>
-                <div class="checkbox">
-                    <label>
-                        <input type="checkbox"> Ativo
-                    </label>
                 </div>
                 <button type="submit" class="btn btn-success">Salvar</button>
             </form>
