--- a/app/fotos.html
+++ b/app/fotos.html
@@ -12,19 +12,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- Custom CSS -->
 <link href="css/style.css" rel='stylesheet' type='text/css' />
 <link href="css/style-responsive.css" rel="stylesheet"/>
+<link rel="stylesheet" href="css/lightbox.css">
 <!-- font CSS -->
 <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 <!-- font-awesome icons -->
 <link rel="stylesheet" href="css/font.css" type="text/css"/>
 <link href="css/font-awesome.css" rel="stylesheet">
-<link rel="stylesheet" href="css/morris.css" type="text/css"/>
-<!-- calendar -->
-<link rel="stylesheet" href="css/monthly.css">
-<!-- //calendar -->
 <!-- //font-awesome icons -->
 <script src="js/jquery2.0.3.min.js"></script>
-<script src="js/raphael-min.js"></script>
-<script src="js/morris.js"></script>
 </head>
 <body>
 <section id="container">
@@ -262,89 +257,131 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!--main content start-->
 <section id="main-content">
 	<section class="wrapper">
-		   <!-- page start-->
+		<!-- gallery -->
+		<!-- gallery -->
+	<div class="gallery">
+		<h2 class="w3ls_head">Albuns de Fotos</h2>
+		<div class="gallery-grids">
+				<div class="gallery-top-grids">
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g1.jpg" data-lightbox="example-set" data-title="Excursão para Salinas no carnaval">
+								<img src="images/g1.jpg" alt="" />
+								<div class="captn">
+									<h4>Salinas</h4>
+									<p>2017</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g2.jpg" data-lightbox="example-set" data-title="Excursão de verão para conhecer fernando de noronha">
+								<img src="images/g2.jpg" alt="" />
+								<div class="captn">
+									<h4>Fernando de Noronha</h4>
+									<p>2016</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g3.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae cursus ligula">
+								<img src="images/g3.jpg" alt="" />
+								<div class="captn">
+									<h4>Visitors</h4>
+									<p>Aliquam non</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="clearfix"> </div>
+				</div>
+				<div class="gallery-top-grids">
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g5.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae cursus ligula">
+								<img src="images/g5.jpg" alt="" />
+								<div class="captn">
+									<h4>Visitors</h4>
+									<p>Aliquam non</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g6.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae cursus ligula">
+								<img src="images/g6.jpg" alt="" />
+								<div class="captn">
+									<h4>Visitors</h4>
+									<p>Aliquam non</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g7.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae cursus ligula">
+								<img src="images/g7.jpg" alt="" />
+								<div class="captn">
+									<h4>Visitors</h4>
+									<p>Aliquam non</p>
+								</div>
+							</a>
+						</div>
+					</div>
 
-        <div class="row">
-            <div class="col-sm-12 vec-wthree">
-                <section class="panel">
-                    <header class="panel-heading">
-                        Mapa Mundial
-                        <span class="tools pull-right">
-                            <a href="javascript:;" class="fa fa-chevron-down"></a>
-                            <a href="javascript:;" class="fa fa-cog"></a>
-                            <a href="javascript:;" class="fa fa-times"></a>
-                         </span>
-                    </header>
-                    <div class="panel-body">
-                        <div id="world-vmap" style="width:100%; height: 400px;"></div>
+					<div class="clearfix"> </div>
+				</div>
+				<div class="gallery-top-grids">
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g8.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae cursus ligula">
+								<img src="images/g8.jpg" alt="" />
+								<div class="captn">
+									<h4>Visitors</h4>
+									<p>Aliquam non</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g9.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae cursus ligula">
+								<img src="images/g9.jpg" alt="" />
+								<div class="captn">
+									<h4>Visitors</h4>
+									<p>Aliquam non</p>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-sm-4 gallery-grids-left">
+						<div class="gallery-grid">
+							<a class="example-image-link" href="images/g4.jpg" data-lightbox="example-set" data-title="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus vitae cursus ligula">
+								<img src="images/g4.jpg" alt="" />
+								<div class="captn">
+									<h4>Visitors</h4>
+									<p>Aliquam non</p>
+								</div>
+							</a>
+						</div>
+					</div>
 
-                    </div>
-                </section>
-            </div>
-        </div>
-        <div class="row">
-                <div class="col-sm-12 vec-wthree">
-                    <section class="panel">
-                        <header class="panel-heading">
-                           EUROPA
-                        <span class="tools pull-right">
-                            <a href="javascript:;" class="fa fa-chevron-down"></a>
-                            <a href="javascript:;" class="fa fa-cog"></a>
-                            <a href="javascript:;" class="fa fa-times"></a>
-                         </span>
-                        </header>
-                        <div class="panel-body">
+					<div class="clearfix"> </div>
+				</div>
+				<div class="clearfix"> </div>
+				<script src="js/lightbox-plus-jquery.min.js"> </script>
 
-                            <div id="europe-vmap" style="width: 100%; height: 520px;"></div>
-
-
-                        </div>
-                    </section>
-                </div>
-            </div>
-        <div class="row">
-                <div class="col-sm-6 vec-wthree">
-                    <section class="panel">
-                        <header class="panel-heading">
-                            ASIA
-                        <span class="tools pull-right">
-                            <a href="javascript:;" class="fa fa-chevron-down"></a>
-                            <a href="javascript:;" class="fa fa-cog"></a>
-                            <a href="javascript:;" class="fa fa-times"></a>
-                         </span>
-                        </header>
-                        <div class="panel-body">
-
-
-                            <div id="asia-vmap" style="width: 100%; height: 520px;"></div>
-
-
-                        </div>
-                    </section>
-                </div>
-                <div class="col-sm-6 vec-wthree">
-                    <section class="panel">
-                        <header class="panel-heading">
-                            AUSTRALIA
-                        <span class="tools pull-right">
-                            <a href="javascript:;" class="fa fa-chevron-down"></a>
-                            <a href="javascript:;" class="fa fa-cog"></a>
-                            <a href="javascript:;" class="fa fa-times"></a>
-                         </span>
-                        </header>
-                        <div class="panel-body">
-
-
-                            <div id="australia-vmap" style="width: 100%; height: 520px;"></div>
-
-                        </div>
-                    </section>
-                </div>
-
-            </div>
-        <!-- page end-->
+	</div>
+	</div>
+	<!-- //gallery -->
 
 </section>
+ <!-- footer -->
+  <!-- / footer -->
 </section>
 <!--main content end-->
 </section>
@@ -355,80 +392,6 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <script src="js/jquery.nicescroll.js"></script>
 <!--[if lte IE 8]><script language="javascript" type="text/javascript" src="js/flot-chart/excanvas.min.js"></script><![endif]-->
 <script src="js/jquery.scrollTo.js"></script>
-<script src="js/jquery.vmap.js"></script>
-<script src="js/jquery.vmap.world.js"></script>
-<script src="js/jquery.vmap.sampledata.js"></script>
-<script src="js/jquery.vmap.europe.js"></script>
-<script src="js/jquery.vmap.asia.js"></script>
-<script src="js/jquery.vmap.australia.js"></script>
-<script>
-    jQuery('#world-vmap').vectorMap({
-        map: 'world_en',
-        backgroundColor: null,
-        color: '#ffffff',
-        hoverOpacity: 0.7,
-        selectedColor: '#666666',
-        enableZoom: true,
-        borderWidth:1,
-        showTooltip: true,
-        values: sample_data,
-        scaleColors: ['#C8EEFF', '#006491'],
-        normalizeFunction: 'polynomial'
-    });
-</script>
-
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-        jQuery('#europe-vmap').vectorMap({
-            map: 'europe_en',
-            backgroundColor: null,
-            color: '#ffffff',
-            borderWidth:1,
-            hoverOpacity: 0.7,
-            selectedColor: '#666666',
-            enableZoom: false,
-            showTooltip: false,
-            values: sample_data,
-            scaleColors: ['#C8EEFF', '#006491'],
-            normalizeFunction: 'polynomial'
-        });
-    });
-</script>
-
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-        jQuery('#asia-vmap').vectorMap({
-            map: 'asia_en',
-            backgroundColor: null,
-            color: '#ffffff',
-            borderWidth:1,
-            hoverOpacity: 0.7,
-            selectedColor: '#666666',
-            enableZoom: false,
-            showTooltip: false,
-            values: sample_data,
-            scaleColors: ['#C8EEFF', '#006491'],
-            normalizeFunction: 'polynomial'
-        });
-    });
-</script>
-
-<script type="text/javascript">
-    jQuery(document).ready(function() {
-        jQuery('#australia-vmap').vectorMap({
-            map: 'australia_en',
-            backgroundColor: null,
-            color: '#ffffff',
-            borderWidth:1,
-            hoverOpacity: 0.7,
-            selectedColor: '#666666',
-            enableZoom: false,
-            showTooltip: false,
-            values: sample_data,
-            scaleColors: ['#C8EEFF', '#006491'],
-            normalizeFunction: 'polynomial'
-        });
-    });
-</script>
+<!-- gallery -->
 </body>
 </html>
