--- a/app/index.html
+++ b/app/index.html
@@ -190,18 +190,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <li>
                     <a class="active" href="index.html">
                         <i class="fa fa-home"></i>
-                        <span>Inicio</span>
+                        <span>Início</span>
                     </a>
                 </li>
 
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-plane"></i>
-                        <span>Excursoes</span>
+                        <span>Excursões</span>
                     </a>
                     <ul class="sub">
                         <li><a href="clientes.html">Clientes</a></li>
-                        <li><a href="excursoes.html">Excursoes</a></li>
+                        <li><a href="excursoes.html">Excursões</a></li>
+                        <li><a href="fotos.html">Fotos</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
@@ -211,84 +212,46 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                     </a>
                     <ul class="sub">
                         <li><a href="#">Motoristas</a></li>
+                        <li><a href="#">Transportes</a></li>
+                        <li><a href="#">Itens de Checagem</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
-                        <i class=" fa fa-bar-chart-o"></i>
-                        <span>Mapa</span>
+                        <i class="fa fa-money"></i>
+                        <span>Pagamentos</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="mapas.html">Mapa Mundial</a></li>
+                        <li><a href="#">Gerar pagamento</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
-                        <i class="fa fa-book"></i>
-                        <span>UI Elements</span>
+                        <i class="fa fa-bar-chart-o"></i>
+                        <span>Relatorios</span>
                     </a>
                     <ul class="sub">
-						<li><a href="typography.html">Typography</a></li>
-						<li><a href="glyphicon.html">glyphicon</a></li>
-                        <li><a href="grids.html">Grids</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="fontawesome.html">
-                        <i class="fa fa-bullhorn"></i>
-                        <span>Font awesome </span>
-                    </a>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-th"></i>
-                        <span>Data Tables</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="basic_table.html">Basic Table</a></li>
-                        <li><a href="responsive_table.html">Responsive Table</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-tasks"></i>
-                        <span>Form Components</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="form_component.html">Form Elements</a></li>
-                        <li><a href="form_validation.html">Form Validation</a></li>
-						<li><a href="dropzone.html">Dropzone</a></li>
+                        <li><a href="#">Manutenções</a></li>
+                        <li><a href="#">Resumo Financeiro</a></li>
+                        <li><a href="#">Agenda por Transporte</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
                         <i class="fa fa-envelope"></i>
-                        <span>Mail </span>
+                        <span>Mail Marketing</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="mail.html">Inbox</a></li>
-                        <li><a href="mail_compose.html">Compose Mail</a></li>
+                        <li><a href="mail_marketing.html">Criar e-mail</a></li>
                     </ul>
                 </li>
                 <li class="sub-menu">
                     <a href="javascript:;">
-                        <i class=" fa fa-bar-chart-o"></i>
-                        <span>Charts</span>
+                        <i class="fa fa-map-marker"></i>
+                        <span>Mapa</span>
                     </a>
                     <ul class="sub">
-                        <li><a href="chartjs.html">Chart js</a></li>
-                        <li><a href="flot_chart.html">Flot Charts</a></li>
-                    </ul>
-                </li>
-                <li class="sub-menu">
-                    <a href="javascript:;">
-                        <i class="fa fa-glass"></i>
-                        <span>Extra</span>
-                    </a>
-                    <ul class="sub">
-                        <li><a href="gallery.html">Gallery</a></li>
-						<li><a href="404.html">404 Error</a></li>
-                        <li><a href="registration.html">Registration</a></li>
+                        <li><a href="mapas.html">Mapa Mundial</a></li>
                     </ul>
                 </li>
             </ul>            </div>
