--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Samistur do Brasil</title>
+<link href="app/images/shortcut.ico" rel="shortcut icon">
 	<!-- Meta tags -->
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
